@@ -1,9 +1,8 @@
 package com.arcone.biopro.distribution.recoveredplasmashipping.unit.domain.model.vo;
 
-import com.arcone.biopro.distribution.recoveredplasmashipping.domain.model.Carton;
-import com.arcone.biopro.distribution.recoveredplasmashipping.domain.model.CartonItem;
 import com.arcone.biopro.distribution.recoveredplasmashipping.domain.model.ProductType;
 import com.arcone.biopro.distribution.recoveredplasmashipping.domain.model.RecoveredPlasmaShipment;
+import com.arcone.biopro.distribution.recoveredplasmashipping.domain.model.vo.ShippingSummaryCartonItem;
 import com.arcone.biopro.distribution.recoveredplasmashipping.domain.model.vo.ShippingSummaryShipmentDetail;
 import com.arcone.biopro.distribution.recoveredplasmashipping.domain.repository.RecoveredPlasmaShipmentCriteriaRepository;
 import org.junit.jupiter.api.Test;
@@ -13,7 +12,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import reactor.core.publisher.Mono;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -38,10 +36,7 @@ class ShippingSummaryShipmentDetailTest {
     private ProductType mockProductType;
 
     @Mock
-    private Carton mockCarton;
-
-    @Mock
-    private CartonItem mockCartonItem;
+    private ShippingSummaryCartonItem mockCartonItem;
 
     private LocalDate shipmentDate;
 
@@ -49,22 +44,20 @@ class ShippingSummaryShipmentDetailTest {
         shipmentDate = LocalDate.now();
 
         when(mockShipment.getShipmentNumber()).thenReturn("SHP001");
-        when(mockShipment.getShipmentDate()).thenReturn(shipmentDate);
         when(mockShipment.getProductType()).thenReturn("TYPE1");
         when(mockShipment.getTransportationReferenceNumber()).thenReturn("TRN001");
 
         when(mockProductType.getProductTypeDescription()).thenReturn("Product Type 1");
         when(mockRepository.findBYProductType(anyString())).thenReturn(Mono.just(mockProductType));
 
-        when(mockCarton.getTotalProducts()).thenReturn(5);
-        when(mockCarton.getProducts()).thenReturn(Collections.singletonList(mockCartonItem));
+        when(mockCartonItem.getTotalProducts()).thenReturn(5);
         when(mockCartonItem.getProductCode()).thenReturn("PC001");
     }
 
     @Test
     void shouldCreateValidShippingSummaryWithDisplayTransportation() {
         setUp();
-        List<Carton> cartons = Collections.singletonList(mockCarton);
+        List<ShippingSummaryCartonItem> cartons = Collections.singletonList(mockCartonItem);
 
         ShippingSummaryShipmentDetail summary = new ShippingSummaryShipmentDetail(
             mockShipment,
@@ -74,7 +67,6 @@ class ShippingSummaryShipmentDetailTest {
         );
 
         assertEquals("SHP001", summary.getShipmentNumber());
-        assertEquals(shipmentDate, summary.getShipmentDate());
         assertEquals("Product Type 1", summary.getProductType());
         assertEquals("PC001", summary.getProductCode());
         assertEquals(1, summary.getTotalNumberOfCartons());
@@ -86,7 +78,7 @@ class ShippingSummaryShipmentDetailTest {
     @Test
     void shouldCreateValidShippingSummaryWithoutDisplayTransportation() {
         setUp();
-        List<Carton> cartons = Collections.singletonList(mockCarton);
+        List<ShippingSummaryCartonItem> cartons = Collections.singletonList(mockCartonItem);
 
         ShippingSummaryShipmentDetail summary = new ShippingSummaryShipmentDetail(
             mockShipment,
@@ -100,10 +92,9 @@ class ShippingSummaryShipmentDetailTest {
 
     @Test
     void shouldHandleEmptyCartonList() {
-        shipmentDate = LocalDate.now();
+
 
         when(mockShipment.getShipmentNumber()).thenReturn("SHP001");
-        when(mockShipment.getShipmentDate()).thenReturn(shipmentDate);
         when(mockShipment.getProductType()).thenReturn("TYPE1");
 
         when(mockProductType.getProductTypeDescription()).thenReturn("Product Type 1");
@@ -125,11 +116,10 @@ class ShippingSummaryShipmentDetailTest {
     void shouldHandleMultipleProductCodes() {
         setUp();
         when(mockCartonItem.getProductCode()).thenReturn("PC001");
-        CartonItem mockCartonItem2 = mock(CartonItem.class);
+        ShippingSummaryCartonItem mockCartonItem2 = mock(ShippingSummaryCartonItem.class);
         when(mockCartonItem2.getProductCode()).thenReturn("PC002");
 
-        when(mockCarton.getProducts()).thenReturn(Arrays.asList(mockCartonItem, mockCartonItem2));
-        List<Carton> cartons = Collections.singletonList(mockCarton);
+        List<ShippingSummaryCartonItem> cartons = List.of(mockCartonItem,mockCartonItem2);
 
         ShippingSummaryShipmentDetail summary = new ShippingSummaryShipmentDetail(
             mockShipment,
@@ -156,10 +146,8 @@ class ShippingSummaryShipmentDetailTest {
 
     @Test
     void shouldThrowExceptionWhenProductTypeNotFound() {
-        shipmentDate = LocalDate.now();
 
         when(mockShipment.getShipmentNumber()).thenReturn("SHP001");
-        when(mockShipment.getShipmentDate()).thenReturn(shipmentDate);
         when(mockShipment.getProductType()).thenReturn("TYPE1");
 
         when(mockRepository.findBYProductType(anyString())).thenReturn(Mono.empty());
@@ -171,6 +159,22 @@ class ShippingSummaryShipmentDetailTest {
                 mockRepository
             )
         );
+    }
+
+    @Test
+    void shouldHandleSingleProductCode() {
+        setUp();
+        when(mockCartonItem.getProductCode()).thenReturn("PC001");
+        List<ShippingSummaryCartonItem> cartons = List.of(mockCartonItem);
+
+        ShippingSummaryShipmentDetail summary = new ShippingSummaryShipmentDetail(
+            mockShipment,
+            cartons,
+            "N",
+            mockRepository
+        );
+
+        assertEquals("PC001", summary.getProductCode());
     }
 }
 
